--- a/react frontend/package.json
+++ b/react frontend/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "bootstrap": "^5.3.0-alpha1",
+    "bootstrap-icons": "^1.10.3",
+    "cdbreact": "^1.5.4",
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
