--- a/react frontend/package.json
+++ b/react frontend/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
@@ -47,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chart.js": "^4.1.2",
+    "chartjs-plugin-gradient": "^0.6.1"
   }
 }
