New Design for the browsing page

--- a/react frontend/package.json
+++ b/react frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.10.3",
     "cdbreact": "^1.5.4",
     "jquery": "^3.6.3",
+    "mdb-react-ui-kit": "^5.1.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
