--- a/react frontend/package.json
+++ b/react frontend/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.7.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-lines-ellipsis": "^0.15.3",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
