--- a/react frontend/package.json
+++ b/react frontend/package.json
@@ -11,10 +11,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@writetome51/array-replace-at": "^1.1.2",
     "axios": "^1.2.3",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
     "cdbreact": "^1.5.4",
+    "immutability-helper": "^3.1.1",
     "jquery": "^3.6.3",
     "mdb-react-ui-kit": "^5.1.0",
     "multer": "^1.4.5-lts.1",
